scss/main.scss
@import '../node_modules/bourbon/app/assets/stylesheets/bourbon';
@import '../node_modules/bourbon-neat/app/assets/stylesheets/neat';

// COLORS //

$dark-background: rgb(34, 34, 34);
$yellow: rgb(251, 220, 68);
$light-background: rgb(100, 100, 100);

// MEDIA QUERIES //

$small-desktop: new-breakpoint(max-width 1150px min-width 911px 9);
$large-tablet: new-breakpoint(max-width 910px min-width 711px 9);
$small-tablet: new-breakpoint(max-width 710px min-width 669px 9);
$large-mobile: new-breakpoint(max-width 668px min-width 0px 9);


// INDEX //

.holder {
  text-align: center;
  height: calc(100vh - 265px);
}

body {
  background: $light-background;
  padding: 0;
  margin: 0;
  font-family: 'Titillium Web', sans-serif;
  // min-width: 1100px;
}

.header {
  position: relative;
  height: 150px;
  background: $dark-background;
  padding: 0 30px;
  text-align: center;

  @include media($large-tablet) {
    height: auto;
  }

  @include media($small-tablet) {
    height: auto;
    padding: 0;
  }

  @include media($large-mobile) {
    height: auto;
    padding: 0;
  }
}

.headerLogo {
  position: relative;
  top: 50%;
  transform: translateY(-50%);
  height: 150px;

  @include media($large-tablet) {
    top: 0;
    transform: translateY(0);
  }

  @include media($small-tablet) {
    top: 0;
    transform: translateY(0);
    margin: 0 auto;
  }

  @include media($large-mobile) {
    top: 0;
    transform: translateY(0);
    margin: 0 auto;
    width: 60vw;
    height: calc(60vw * .375748503);
  }

}

.headerInfoList {
  position: absolute;
  top: 20px;
  right: 25px;
  color: $yellow;
  list-style: none;
  font-size: 1.25rem;
  margin: 0;
  padding: 0;

  @include media($large-tablet) {
    position: relative;
    top: 0;
    right: 0;
  }

  @include media($small-tablet) {
    position: relative;
    top: 0;
    right: 0;
  }

  @include media($large-mobile) {
    position: relative;
    top: 0;
    right: 0;
  }
}

.headerCallUs {
  font-weight: lighter;

}

.headerInfoListItemLink {
  text-decoration: none;
  color: $yellow;
}

.menu {
  background: $yellow;

  @include media($large-mobile) {
    display: none;
  }
}

.menuList {
  margin: 0;
  padding: 0;
  height: 50px;
  text-align: center;
}

.menuListItem {
  position: relative;
  top: 50%;
  transform: translateY(-50%);
  padding: 0 25px;
  height: 50px;
  line-height: 50px;
  display: inline-block;

  &:hover {
    background: #FFEC86;
  }
}

.menuLink {
  text-decoration: none;
  color: $dark-background;
}

.menuActive {
  background: #FFEC86;
}

.hamburgerContainer {
  display: none;
  background: $yellow;

  @include media($large-mobile) {
    display: block;
    height: 35px;
    padding-left: 5%;
  }
}

.hamburgerIconContainer {
  position: relative;
  top: 50%;
  transform: translateY(-50%);
}

#nav-icon1 {
  width: 25px;
  height: 20px;
  position: relative;
  top: 15%;
  transform: translateY(50%);
  margin: 0;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -o-transform: rotate(0deg);
  transform: rotate(0deg);
  // -webkit-transition: .25s ease-in-out;
  // -moz-transition: .25s ease-in-out;
  // -o-transition: .25s ease-in-out;
  // transition: .25s ease-in-out;
  cursor: pointer;
}

#nav-icon1 span {
  display: block;
  position: absolute;
  height: 4px;
  width: 100%;
  background: $dark-background;
  border-radius: 9px;
  opacity: 1;
  left: 0;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -o-transform: rotate(0deg);
  transform: rotate(0deg);
  // -webkit-transition: .125s ease-in-out;
  // -moz-transition: .125s ease-in-out;
  // -o-transition: .125s ease-in-out;
  // transition: .125s ease-in-out;
}

#nav-icon1 span:nth-child(1) {
  top: 0px;
}

#nav-icon1 span:nth-child(2) {
  top: 8px;
}

#nav-icon1 span:nth-child(3) {
  top: 16px;
}

#nav-icon1.open span:nth-child(1) {
  top: 8px;
  -webkit-transform: rotate(135deg);
  -moz-transform: rotate(135deg);
  -o-transform: rotate(135deg);
  transform: rotate(135deg);
}

#nav-icon1.open span:nth-child(2) {
  opacity: 0;
  left: -35px;
}

#nav-icon1.open span:nth-child(3) {
  top: 8px;
  -webkit-transform: rotate(-135deg);
  -moz-transform: rotate(-135deg);
  -o-transform: rotate(-135deg);
  transform: rotate(-135deg);
}

.hamburgerMenu {
  margin: 14px 0 0 0;
  padding: 0;
  position: absolute;
  right: 0;
  left: 0;
  height: 0;
  overflow: hidden;
  background: $yellow;
  // transition: all .15s ease;

}

.hamburgerMenuLink {
  background: $yellow;
  text-decoration: none;
  list-style: none;
  padding: 0;
  margin: 0;
  position: relative;
}

.hamburgerMenuListItem {
  background: $yellow;
  color: $dark-background;
  text-decoration: none;
  border-top: 1px solid black;
  padding: 10px 0 10px 17px;
}

.hamburgerMenuActive {
  background: #FFEC86;
}

.content {
  background: url('../images/engine.jpeg');
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  box-shadow: inset 0 0 0 1000px rgba(100, 100, 100, .9);
  padding: 40px 0 60px 0;
  // transition: all .15s ease;
}

.subHeader {
  margin: 0 auto;
  background: $yellow;
  overflow: hidden;
  height: 500px;
  width: 1100px;

  @include media($small-desktop) {
    width: 900px;
    height: 400px;
  }

  @include media($large-tablet) {
    width: 700px;
    height: 300px;
  }

  @include media($small-tablet) {
    width: 90%;
    margin: 0 auto;
    height: auto;
  }

  @include media($large-mobile) {
    width: 90%;
    margin: 0 auto;
    height: auto;
  }
}

.subHeaderImgWrapper {
  position: relative;
  top: 50%;
  transform: translateY(-50%);
  width: 70%;
  display: inline-block;
  height: calc(100vw * .6492506);

  @include media($small-tablet) {
    width: 100%;
    top: 0%;
    transform: translateY(0%);
  }

  @include media($large-mobile) {
    width: 100%;
    top: 0%;
    transform: translateY(0%);
  }
}

.subHeaderImg {
  width: 100%;
  position: relative;
  top: 50%;
  transform: translateY(-50%);

  @include media($small-tablet) {
    height: calc(100vw * .6492506);
  }

  @include media($large-mobile) {
    height: calc(100vw * .6492506);
  }
}

.subHeaderListContainer {
  float: right;
  width: 30%;

  @include media($small-tablet) {
    width: 100%;
    margin: 0 auto;
    padding: 0 5%;
  }

  @include media($large-mobile) {
    width: 100%;
    margin: 0 auto;
    padding: 0 5%;
  }
}

.subHeaderList {
  font-size: 1.5rem;
  list-style: none;
  text-align: center;
  padding: 0;
  position: relative;

  @include media($large-tablet) {
    font-size: 1rem;
  }

  @include media($small-tablet) {
    font-size: 1rem;
  }

  @include media($large-mobile) {
    font-size: 1.2rem;
  }
}

.subHeaderListItem {
  margin: 20px 0;
}

.subHeaderListItemLink {
  text-decoration: none;
}

.subHeaderListItemButton {
  border: 1px solid $dark-background;
  margin: 0 20px;
  background: $dark-background;
  color: $yellow;
  border-radius: 2px;
  transition: all 250ms ease;

  &:hover {
    background: $light-background;
    border: 1px solid $light-background;
  }

  @include media($small-tablet) {
    display: none;
  }

  @include media($large-mobile) {
    display: none;
  }
}

.mobileButton {
  display: none;

  @include media($small-tablet) {
    display: block;
    width: 50%;
    background: $dark-background;
    padding: 5px;
    margin: 10px auto;
    border-radius: 2px;
    color: $yellow;
    text-align: center;
  }

  @include media($large-mobile) {
    display: block;
    width: 50%;
    background: $dark-background;
    padding: 5px;
    margin: 10px auto;
    border-radius: 2px;
    color: $yellow;
    text-align: center;
  }
}

.mobileButtonContainer {
  padding: 10px 0;
}

.mobileButtonText {
  color: $yellow;
  margin: 0;
}

.divider {
  border: 2px solid $yellow;
  margin: 60px 0 0 0;
}

.aboutShop {
  padding: 40px;
}

.aboutShopHours {
  margin: 0;
}

/*******************
FOOTER
*******************/

.footer {
  background: rgba(170, 170, 170, 1);
  border-top: 4px solid $yellow;
  padding: 10px;
  @include clearfix;
}

.leftFooter {
  display: inline-block;
  width: 49%;

  @include media($small-tablet) {
    width: 100%;
    text-align: center;
  }

  @include media($large-mobile) {
    width: 100%;
    text-align: center;
  }
}

.rightFooter {
  display: inline-block;
  width: 49%;
  float: right;

  @include media($small-tablet) {
    width: 100%;
    text-align: center;
  }

  @include media($large-mobile) {
    width: 100%;
    text-align: center;
  }
}

.footerHours {
  margin: 0;
  color: $dark-background;
  font-weight: 400;
  display: inline-block;
}

.footerHoursBold {
  font-weight: bold;
}

.footerAddress {
  text-align: right;
  display: block;
  margin: 0;
  font-weight: 400;

  @include media($small-tablet) {
    text-align: center;
  }

  @include media($large-mobile) {
    text-align: center;
  }
}

.footerLink {
  text-decoration: none;
  color: $dark-background;
}

/*******************
SERVICES
*******************/





/*******************
GALLERY
*******************/




/*******************
CONTACT
*******************/

.contactHeader {
  text-align: center;
  margin-top: 0;
  font-weight: 300;
}

.contactContainer {
  width: 80%;
  margin: 0 auto;
  background: rgba(34, 34, 34, .8);
  border-radius: 5px;
  padding: 1% 2.5% 2.5% 2.5%;
  color: $yellow;
}

.leftContact {
  display: inline-block;
  width: 30%;
  vertical-align: top;
  background: rgba(34, 34, 34, .8);
  padding: 5px;
  border-radius: 5px;
}

.leftContact h2 {
  margin: 0;
  font-weight: 200;
}

.leftContact p {
  margin: 0;
}

.contactAddressIcon {
  display: inline-block;
  height: 100%;
  vertical-align: top;
  padding-bottom: 9px;
}

.verticalAlign {
  position: relative;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.contactAddress {
  margin: 10px 0;
  padding: 0;
  display: inline-block;
}

.contactPhone, .contactEmail{
  padding: 5px 0;
}

.fa {
  margin-right: 7px;
}

.contactPhone a, .contactEmail a {
  color: $yellow;
  text-decoration: none;
}

.googleMapEmbed {
  width: 100%;
  margin: 15px 0;
}

.rightContact {
  display: inline-block;
  width: 70%;
  padding-left: 10%;
  vertical-align: top;
}

.formHeader {
  margin: 0 0 20px 0;
  font-weight: 200;
}

.formElement {
  font-size: 1.1rem;
  font-weight: 300;
  margin: 7px 0;
}

label {
  display: block;
}

.inputLabel {
  display: inline-block;
  width: 20%;
  vertical-align: top;
}

.formFirstName {
  width: 37.5%;
}

.formLastName {
  width: 37.5%;
  float: right;
}

.formEmail {
  width: 43%;
}

.telInputOne {
  width: 3rem;
}

.telInputTwo {
  width: 3rem;
}

.telInputThree {
  width: 4rem;
}

.formMessage {
  width: 80%;
  height: 200px;
}

.formSubmit {
  float: right;
  background: $yellow;
  border: none;
  width: 80px;
}

